# BlockStats

./: README.md  main.py  pyproject.toml
templates/: index.html  stats.html
