[tool.poetry]
name = "mc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
mcstatus = "^4.1.0"
jinja2 = "^2.11.2"
aiohttp = "^3.7.3"
aiohttp-jinja2 = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
